# ideological-polarization-detector

./: .gitignore  LICENSE  README.md  collect_comments.py  comment_cluster_results.csv  pyproject.toml  requirements.txt  run_youtube_clustering.py  sentiment_analysis.py  sentiment_results.csv  youtube_comments.csv
data/synthetic/: README.txt  comment_likes.csv  comments.csv  daily_summary.csv  follows.csv  likes.csv  policy_events.csv  posts.csv  synthetic_echo_chamber_policy_dataset_summary.xlsx  user_interaction_edges.csv  users.csv
outputs/tables/: cluster_summary.csv  detected_user_clusters.csv
scripts/: check_dataset.py  check_sqlite.py  run_pipeline.py  run_synthetic_pipeline.py
src/echo_chamber/: clustering.py  config.py  data_loader.py  export.py  graph_builder.py  polarization.py  preprocessing.py  similarity.py
src/echo_chamber_polarization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
