[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-chamber-polarization"
version = "0.1.0"
description = "Echo chamber and polarization detection in social media networks"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
